--- a/styles.css
+++ b/styles.css
@@ -16,19 +16,19 @@ footer {
   font-family: sans-serif;
 }
 
-.w {
+.a {
   background-image: url(./images/tom1.png);
 }
 
-.a {
+.s {
   background-image: url(./images/tom2.png);
 }
 
-.s {
+.d {
   background-image: url(./images/tom3.png);
 }
 
-.d {
+.f {
   background-image: url(./images/tom4.png);
 }
 
