updated styles.css file

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,18 @@
 body {
   text-align: center;
-  background-color: #283149;
+  /* background-color: #283149; */
+  background-color: #000;
+  font-family: cursive;
+}
+
+#title {
+  margin-top: 100px ;
 }
 
 h1 {
   font-size: 5rem;
   color: #DBEDF3;
-  font-family: "Arvo", cursive;
+  /* font-family: "Arvo", cursive; */
   text-shadow: 3px 0 #DA0463;
 
 }
